@@ -334,78 +334,6 @@ __attribute__ ((always_inline))
         int  llcountones (long long  _x) asm ("__llcountones");
 
 
-/* * * *        isinf      * * * *
- *      Is number +/- Infinity?
- */
-#if !defined(__NO_BUILTIN)
-__inline__
-__attribute__ ((always_inline))
-        static int isinff(float _x) {
-                union { float _xx; unsigned long _l; } _v;
-                _v._xx = _x;
-                return (_v._l & 0x7fffffffu) == 0x7f800000u;
-        }
-
-#ifdef __DOUBLES_ARE_FLOATS__
-__inline__
-__attribute__ ((always_inline))
-        static int isinf(double _x) {
-                union { double _xx; unsigned long _l; } _v;
-                _v._xx = _x;
-                return (_v._l & 0x7fffffffu) == 0x7f800000u;
-        }
-#endif
-#else
-        int isinff(float _x) asm ("_isinf");
-
-#ifdef __DOUBLES_ARE_FLOATS__
-        int isinf(double _x);
-#endif
-#endif /* !__NO_BUILTIN */
-
-
-        int isinfd(long double _x) asm ("_isinfd");
-
-#if !defined(__DOUBLES_ARE_FLOATS__)
-        int isinf(double _x) asm ("_isinfd");
-#endif
-
-
-/* * * *        isnan           * * * *
- *      Is number Not A Number?
- */
-#if !defined(__NO_BUILTIN)
-__inline__
-__attribute__ ((always_inline))
-        static int isnanf(float _x) {
-                union { float _xx; unsigned long _l; } _v;
-                _v._xx = _x;
-                return (_v._l & 0x7fffffffu) > 0x7f800000uL;
-        }
-
-#ifdef __DOUBLES_ARE_FLOATS__
-__inline__
-__attribute__ ((always_inline))
-        static int isnan(double _x) {
-                union { double _xx; unsigned long _l; } _v;
-                _v._xx = _x;
-                return (_v._l & 0x7fffffffu) > 0x7f800000uL;
-        }
-#endif
-#else
-        int isnanf(float _x) asm ("_isnan");
-
-#ifdef __DOUBLES_ARE_FLOATS__
-        int isnan(double _x);
-#endif
-#endif /* !__NO_BUILTIN */
-
-
-        int isnand(long double _x) asm ("_isnand");
-
-#if !defined(__DOUBLES_ARE_FLOATS__)
-        int isnan(double _x) asm ("_isnand");
-#endif
 
 
 
